Add styling to Reviews new page and add React component for star ratings

--- a/app/javascript/stylesheets/layout.scss
+++ b/app/javascript/stylesheets/layout.scss
@@ -11,3 +11,8 @@ html, body {
     background: $light;
     color: $dark;
 }
+
+.form-group.required .control-label:after { 
+    content:"*";
+    color: $secondary;
+ }
