--- a/app/views/reviews/new.html.slim
+++ b/app/views/reviews/new.html.slim
@@ -1,2 +1,3 @@
-h1 Create a review
-= render 'form'
+.d-flex.align-items-center.flex-column.justify-content-center.h-100
+    h1 Create a review
+    = render 'form'
