--- a/app/javascript/stylesheets/_reviews.scss
+++ b/app/javascript/stylesheets/_reviews.scss
@@ -1,13 +1,11 @@
-.form-panel, .table-panel, .show-panel {
+.table-panel, .form-panel, .show-panel {
     background: $light;
-    width: 100%;
     color: $dark;
+    padding: 1em 1em;
+    margin: 1em;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     border-radius: 6px;
-    padding: 3em 1em;
-    margin: 1em;
 }
-
 .search-row {
     margin-bottom: 1em
 }
